# IronGolem_OS

./: .env.example  .gitignore  03-roadmap-and-release-plan-v2.md  04-implementation-plan-v2.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
apps/admin-console/: index.html  package.json  vite.config.ts
apps/admin-console/src/: App.tsx
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
connectors/: connector.go  go.mod
connectors/browser/: browser.go
connectors/discord/: discord.go
connectors/email/: email.go
connectors/feishu/: feishu.go
connectors/filesystem/: filesystem.go
connectors/slack/: slack.go
connectors/telegram/: telegram.go
connectors/webhook/: webhook.go
connectors/whatsapp/: whatsapp.go
docs/: CHANGELOG.md  README.md
docs/architecture/: data-layer.md  go-control-plane.md  overview.md  rust-runtime.md  security-model.md  typescript-experience.md
docs/design/: README.md  component-catalog.md  design-patterns.md  information-architecture.md  mobile-and-accessibility.md  ux-mission-and-pillars.md  visual-system.md
docs/guides/: agent-roles.md  api-reference.md  autonomous-loops.md  connector-development.md  deployment-guide.md  getting-started.md  user-guide.md
docs/implementation/: README.md  milestones.md  phase-0-alignment.md  phase-1-trust.md  phase-2-govern.md  phase-3-adapt.md  phase-4-defend.md  phase-5-expand.md  repository-structure.md  testing-strategy.md  workstreams.md
docs/specs/: 01-product-requirements-document-v2.md  02-features-modules-and-agent-loops-v2.md  05-ui-ux-design-guide-v2.md  IronGolemOS_handbook.md
infra/docker/: Dockerfile.services  Dockerfile.web  docker-compose.yml  nginx.conf
infra/otel/: otel-collector.yaml
runtime/checkpoints/: Cargo.toml
runtime/checkpoints/src/: lib.rs  manager.rs  sqlite_store.rs  store.rs
runtime/core/: Cargo.toml
runtime/core/src/: error.rs  event.rs  lib.rs  pg_store.rs  plan.rs  policy.rs  risk.rs  store.rs  types.rs
runtime/memory/: Cargo.toml
runtime/memory/src/: graph.rs  lib.rs  sqlite_store.rs  store.rs
runtime/memory/tests/: integration.rs
runtime/sandbox/: Cargo.toml
runtime/sandbox/src/: capability.rs  host.rs  lib.rs
runtime/verifier/: Cargo.toml
runtime/verifier/src/: checks.rs  contract.rs  lib.rs
runtime/workflow/: Cargo.toml
runtime/workflow/src/: engine.rs  executor.rs  lib.rs
services/: go.mod
services/defense/cmd/: main.go
services/defense/internal/: allowlist.go  anomaly.go  command.go  detector.go  detector_test.go  incident.go  quarantine.go  rollback.go
services/fleet/cmd/: main.go
services/fleet/internal/: manager.go
services/gateway/cmd/: main.go
services/health/cmd/: main.go
services/optimizer/cmd/: main.go
(+73 files in other folders)
