[workspace]
resolver = "2"
members = [
    "runtime/core",
    "runtime/workflow",
    "runtime/sandbox",
    "runtime/memory",
    "runtime/verifier",
    "runtime/checkpoints",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Ph4wkm00n/IronGolem_OS"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Database
rusqlite = { version = "0.32", features = ["bundled"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }
# Time
chrono = { version = "0.4", features = ["serde"] }
# Async trait
async-trait = "0.1"
