[package]
name = "irongolem-memory"
description = "Knowledge graph storage and queries for IronGolem OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
irongolem-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
