[package]
name = "irongolem-workflow"
description = "Execution state machines for IronGolem OS"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
irongolem-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
